@@ -5,3 +5,4 @@ INSTALL
 NEWS
 README
 TODO
+shellinabox/white-on-black.css
