@@ -1,3 +1,12 @@
+2009-07-30  Markus Gutschke  <markus@shellinabox.com>
+
+	* Added the --css command line option to make incremental changes
+	to the style sheet without having to load a full replacement with
+	the --static-file option. Added an example that enables white text
+	on a black background.
+
+	* Added Debian specific documentation to the manual page.
+
 2009-07-29  Markus Gutschke  <markus@shellinabox.com>
 
 	* Allow unprivileged users to run the daemon. This requires
